[PCFG-14] added code-review pipeline and set jdk version to 11